--- a/index.html
+++ b/index.html
@@ -64,16 +64,38 @@
       <div class="intro-text">
         <div class="intro-heading">Jasmin's Beauty Salon</div>
         <div class="intro-lead-in">Full Service Salon</div>
-        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="tel:+1-765-659-0243">Book an appointment</a>
+        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="tel:+1-765-659-0243">Book an
+          appointment</a>
         <table>
-          <tr><th>Sunday</th><td>Closed</td></tr>
-          <tr><th>Monday</th><td>11am - 7pm</td></tr>
-          <tr><th>Tuesday</th><td>11am - 7pm</td></tr>
-          <tr><th>Wednesday</th><td>11am - 7pm</td></tr>
-          <tr><th>Thursday</th><td>11am - 7pm</td></tr>
-          <tr><th>Friday</th><td>11am - 7pm</td></tr>
-          <tr><th>Saturday</th><td>11am - 5pm</td></tr>
-          </table>
+          <tr>
+            <th>Sunday</th>
+            <td>Closed</td>
+          </tr>
+          <tr>
+            <th>Monday</th>
+            <td>11am - 7pm</td>
+          </tr>
+          <tr>
+            <th>Tuesday</th>
+            <td>11am - 7pm</td>
+          </tr>
+          <tr>
+            <th>Wednesday</th>
+            <td>11am - 7pm</td>
+          </tr>
+          <tr>
+            <th>Thursday</th>
+            <td>11am - 7pm</td>
+          </tr>
+          <tr>
+            <th>Friday</th>
+            <td>11am - 7pm</td>
+          </tr>
+          <tr>
+            <th>Saturday</th>
+            <td>11am - 5pm</td>
+          </tr>
+        </table>
       </div>
     </div>
   </header>
@@ -130,7 +152,11 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">About</h2>
-          <h3 class="section-subheading text-muted">Jasmin's Beauty Salon is an awesome family friendly salon. We offer several services besides haircuts. <br> Such as colors, hilites, treatments, perms, and waxing. At Jasmins Beauty Salon we like to ensure our <Br> customers leave happy. Not only is it laid back and filled with a friendly staff, but we take our time to assure <br>you get the best job and leave feeling 100% satisfied with your experience. Hope to see you all soon.</h3>
+          <h3 class="section-subheading text-muted">Jasmin's Beauty Salon is an awesome family friendly salon. We offer
+            several services besides haircuts. <br> Such as colors, hilites, treatments, perms, and waxing. At Jasmins
+            Beauty Salon we like to ensure our <Br> customers leave happy. Not only is it laid back and filled with a
+            friendly staff, but we take our time to assure <br>you get the best job and leave feeling 100% satisfied
+            with your experience. Hope to see you all soon.</h3>
         </div>
       </div>
     </div>
@@ -142,29 +168,31 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">We are hiring!</h2>
-          <h3 class="section-subheading text-muted">Please call and ask to setup a meeting with Jasmin to discuss your qualifications.</h3>
+          <h3 class="section-subheading text-muted">Please call and ask to setup a meeting with Jasmin to discuss your
+            qualifications.</h3>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- Contact -->  
+  <!-- Contact -->
   <section id="contact">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Contact</h2>
+          <h2 class="section-heading text-uppercase">Contact Me</h2>
           <a class="section-subheading text-muted" href="tel:+1-765-659-0243">(765)659-0243</a>
           <hr>
-          <a class="section-subheading text-muted" href="mailto:jasminsbeautysalon2019@gmail.com">jasminsbeautysalon2019@gmail.com</a>
+          <a class="section-subheading text-muted"
+            href="mailto:jasminsbeautysalon2019@gmail.com">jasminsbeautysalon2019@gmail.com</a>
         </div>
       </div>
       <hr>
       <div class="row">
         <div class="col-lg-12">
-          <form id="contactForm" name="sentMessage" novalidate="novalidate">
-            <div class="row">
-              <div class="col-md-6">
+          <div class="row">
+            <div class="col-md-6">
+              <form action="https://formspree.io/marcguerra91@gmail.com" method="POST">
                 <div class="form-group">
                   <input class="form-control" id="name" type="text" placeholder="Your Name *" required="required"
                     data-validation-required-message="Please enter your name.">
@@ -180,22 +208,22 @@
                     data-validation-required-message="Please enter your phone number.">
                   <p class="help-block text-danger"></p>
                 </div>
-              </div>
-              <div class="col-md-6">
-                <div class="form-group">
-                  <textarea class="form-control" id="message" placeholder="Your Message *" required="required"
-                    data-validation-required-message="Please enter a message."></textarea>
-                  <p class="help-block text-danger"></p>
-                </div>
-              </div>
-              <div class="clearfix"></div>
-              <div class="col-lg-12 text-center">
-                <div id="success"></div>
-                <button id="sendMessageButton" class="btn btn-primary btn-xl text-uppercase" type="submit">Send
-                  Message</button>
+            </div>
+            <div class="col-md-6">
+              <div class="form-group">
+                <textarea class="form-control" id="message" placeholder="Your Message *" required="required"
+                  data-validation-required-message="Please enter a message."></textarea>
+                <p class="help-block text-danger"></p>
               </div>
             </div>
-          </form>
+            <div class="clearfix"></div>
+            <div class="col-lg-12 text-center">
+              <div id="success"></div>
+              <button id="sendMessageButton" class="btn btn-primary btn-xl text-uppercase" type="submit">Send
+                Message</button>
+            </div>
+          </div>
+            </form>
         </div>
       </div>
     </div>
@@ -210,13 +238,13 @@
         </div>
         <div class="col-md-4">
           <ul class="list-inline social-buttons">
-            
+
             <li class="list-inline-item">
               <a href="https://www.facebook.com/Jasmins-Beauty-Salon-210353445792959/">
                 <i class="fab fa-facebook-f"></i>
               </a>
             </li>
-            
+
           </ul>
         </div>
         <div class="col-md-4">
@@ -241,9 +269,6 @@
   <!-- Plugin JavaScript -->
   <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
-  <!-- Contact form JavaScript -->
-  <script src="js/jqBootstrapValidation.js"></script>
-  <script src="js/contact_me.js"></script>
 
   <!-- Custom scripts for this template -->
   <script src="js/agency.min.js"></script>
