--- a/index.html
+++ b/index.html
@@ -187,48 +187,45 @@
             href="mailto:jasminsbeautysalon2019@gmail.com">jasminsbeautysalon2019@gmail.com</a>
         </div>
       </div>
-      <hr>
-      <form action="https://formspree.io/marcguerra91@gmail.com" method="POST">
-      <div class="row">
-        <div class="col-lg-12">
-          <div class="row">
-            <div class="col-md-6">
-                <div class="form-group">
-                  <input class="form-control" id="name" type="text" placeholder="Your Name *" required="required"
-                  data-validation-required-message="Please enter your name.">
-                  <p class="help-block text-danger"></p>
-                </div>
-                <div class="form-group">
-                  <input class="form-control" id="email" type="email" placeholder="Your Email *" required="required"
-                    data-validation-required-message="Please enter your email address.">
-                  <p class="help-block text-danger"></p>
-                </div>
-                <div class="form-group">
-                  <input class="form-control" id="phone" type="tel" placeholder="Your Phone *" required="required"
-                  data-validation-required-message="Please enter your phone number.">
-                  <p class="help-block text-danger"></p>
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="form-group">
-                  <textarea class="form-control" id="message" placeholder="Your Message *" required="required"
-                  data-validation-required-message="Please enter a message."></textarea>
-                  <p class="help-block text-danger"></p>
-                </div>
-              </div>
-              <div class="clearfix"></div>
-              <div class="col-lg-12 text-center">
-                <div id="success"></div>
-                <button id="sendMessageButton" class="btn btn-primary btn-xl text-uppercase" type="submit">Send
-                  Message</button>
-                </div>
+      <br>
+      <div class="container">
+        <div>
+          <form action="https://formspree.io/Marcguerra91@gmail.com" method="POST">
+            <div class="control-group">
+              <div class="form-group">
+                <input type="text" class="form-control" placeholder="Your Name" id="name" required
+                  data-validation-required-message="Please enter your name" name="name">
+                <p class="help-block text-danger"></p>
               </div>
             </div>
-          </form>  
-          </div>
+            <div class="control-group">
+              <div class="form-group">
+                <input type="email" class="form-control" placeholder="Your Email" id="email" required
+                  data-validation-required-message="Please enter your email" name="_replyto">
+                <p class="help-block text-danger"></p>
+              </div>
+            </div>
+            <div class="control-group">
+              <div class="form-group">
+                <textarea class="form-control" rows="7" placeholder="Your Message" id="message" required
+                  data-validation-required-message="Please leave a message" name="message"></textarea>
+                <p class="help-block text-danger"></p>
+              </div>
+            </div>
+            <div class="text-center">
+              <div id="success"></div>
+              <button type="submit" class="btn btn-lg btn-black">
+                <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
+                Send Message
+              </button>
+            </div>
+          </form>
         </div>
-      </section>
-      
+      </div>
+    </div>
+    </div>
+  </section>
+
   <!-- Footer -->
   <footer>
     <div class="container">
