--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
           <form action="https://formspree.io/Marcguerra91@gmail.com" method="POST">
             <div class="control-group">
               <div class="form-group">
-                <input type="text" class="form-control" placeholder="Your Name" id="name" required
+                <input type="text" class="form-control" placeholder="Your Full Name" id="name" required
                   data-validation-required-message="Please enter your name" name="name">
                 <p class="help-block text-danger"></p>
               </div>
@@ -201,7 +201,7 @@
             <div class="control-group">
               <div class="form-group">
                 <input type="email" class="form-control" placeholder="Your Email" id="email" required
-                  data-validation-required-message="Please enter your email" name="_replyto">
+                  data-validation-required-message="Please enter your email" name="replyto">
                 <p class="help-block text-danger"></p>
               </div>
             </div>
@@ -214,7 +214,7 @@
             </div>
             <div class="text-center">
               <div id="success"></div>
-              <button type="submit" class="btn btn-lg btn-black">
+              <button type="submit" class="btn btn-lg">
                 <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
                 Send Message
               </button>
