--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
       <br>
       <div class="container">
         <div>
-          <form action="https://formspree.io/Marcguerra91@gmail.com" method="POST">
+          <form action="https://formspree.io/jasminsbeautysalon2019@gmail.com" method="POST">
             <div class="control-group">
               <div class="form-group">
                 <input type="text" class="form-control" placeholder="Your Full Name" id="name" required
